# ded-toolbox

./: .gitignore  README.md
ad-cloud-user-sanitycheck/: Check-ADUserCloud.ps1  README.md
ad-groups/: Patch-ADGroup.ps1
aws-scripts/: GetEc2Instances.ps1  GetRDS.ps1  get_rds_ca_expiration.ps1
capability-limitrange/: .flake8  Makefile  bulk-apply-limitrange.sh  limitrange.yaml  pyproject.toml  violate-limitranges.py
capability-limitrange/src/kubernetes/: limit_range_violations.py  pod_resources.py
capability-logs-role/: README.md  capability-logs-policy.json  create-logs-capability-adgroup.ps1  create-logs-capability-role.sh  trust-policy.json
capability-roles-update/: README.md  bulk-update-roles.sh
eks-cluster-scripts/: GetCert.ps1  GetRDS.ps1  README.md  get_rds_ca_expiration.ps1
eks-sandbox-cluster/: README.md  eks-sandbox.sh  sandbox-vars-example.sh
eks-upgrade/: Publish-AWSPowerShellLambda.ps1  Upgrade notes.md  asg_k8s_rollover.ps1  asg_k8s_rollover_lambda.ps1  eks_upgrade_old.ps1  misc-commands.ps1
get-terraform-provider-versions/: README.md  get_provider_versions.py  get_tf_provider_versions.py  pyproject.toml
get-terraform-provider-versions/get_terraform_provider_versions/: get-tf-provider-versions.py  get_tf_provider_versions.py  out.txt
get-terraform-provider-versions/get_terraform_provider_versions/github/: repo.py
get-terraform-provider-versions/tests/: test_get_terraform_provider_versions.py
github-branch-protection/: README.md  manage_branch_protection_rules.py  requirements_dev.txt  tox.ini
github-branch-protection/github/: branch_protection.py
k8s-deprecated-api/: get-resources-deprecated-api.sh
k8s-service-account-config-to-ssm/: README.md  config.py  config.template  include.ps1  kube-config-generator.ps1  kube-config-generator.sh  kube_config_generator.py  pyproject.toml  sample_env.txt
kafka-delete-topic/: README.md  config.py  delete_topics.py  pyproject.toml  requirements.txt  requirements_dev.txt  sample_env.txt  topics.sample  tox.ini
kafka-delete-topic/capability_service/: kafka.py
manage-unused-replicasets/: README.md  manage_unused_replicasets.py  pyproject.toml  replicasets_management.py
manage-unused-replicasets/manage_unused_replicasets/: deployment.py  namespace.py  replicaset.py
manage-unused-replicasets/tests/: test_manage_unused_replicasets.py
microsoft-graph-powershell/: Dockerfile
microsoft-ubuntu-powershell/: Dockerfile  README.md
microsoft-ubuntu-powershell/scripts/: add_token_lifetime_policy.ps1  add_user_directory_extension.ps1  register_directory_extension_property.ps1  register_extension_schema.ps1
offboarding/github/: Cargo.toml  README.md
offboarding/github/src/: main.rs
security-detection/: README.md
security-detection/CVE-2020-8554/: audit.sh
terraform-scripts/: Check-Terraform-Providers.ps1
traefik-scripts/: README.md  traefik-report.ps1
update-federation-metadata/: README.md  run.ps1  run.sh
update-namespaces-in-kubernetes/src/: src.sln
update-namespaces-in-kubernetes/src/namespacemigrator/: Program.cs
update-roles-in-kubernetes/: README.md
update-roles-in-kubernetes/src/: src.sln
update-roles-in-kubernetes/src/rolemigrator/: Program.cs  rolemigrator.csproj
