[tool.poetry]
name = "capability-limitrange"
version = "0.1.0"
description = "Detect pods violating limitranges"
authors = ["Willi Carlsen <carlsenwilli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^17.17.0"
magnitude = "^0.9.4"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
pylint = "^2.8.3"
mypy = "^0.901"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
