[tool.poetry]
name = "get-terraform-provider-versions"
version = "0.1.0"
description = "Parses Terraform source files to generate documentation on used Terraform provider versions."
authors = ["Peter West <pwes@dfds.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
